--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.4",
@@ -21,7 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.288.0",
-    "next": "13.5.6",
+    "next": "^14.0.0",
     "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
@@ -42,8 +42,5 @@
     "tailwindcss": "^3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
-  },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
